--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -292,3 +292,15 @@ body
   max-width: 30%;
   min-width: 8%;
 }
+
+.commercial
+{
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
+#information
+{
+  color: yellow;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
