--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -299,6 +299,12 @@ body
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 }
 
+#numbers
+{
+  color: lightcyan;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
 #information
 {
   color: yellow;
