--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -312,3 +312,5 @@ body
   color: yellow;
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 }
+
+.ui-datepicker-unselectable span {color: red !important;}
